--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,15 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+/app/generated/prisma
+
+# env
+.env
+.env.*
+
+# node_modules
+node_modules/
+
+# vscode
+.vscode/*
